[package]
name = "apt-rs"
version = "0.2.1"
authors = ["Patrick Gallagher <patrickj@cpgallagher.com>"]
description = "A Rust client for batch installing Aptitude packages (a la Cargo.toml)"
readme = "README.md"
license = "MIT"
repository = "https://github.com/pattyjogal/apt.rs"


[dependencies]
toml = "0.4"